--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,7 @@ jobs:
       - name: Say hello
         run : |
           echo "Hello World!"
+      - name: Print Date
+        run: date
+      - name: Directory content
+        run: ls
