--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   # Using an ubuntu-20.04 virtual environment. Use what you will have in production.
   simple_deployment_pipeline:
+    timeout-minutes: 60
     runs-on: ubuntu-20.04
     steps:
       # It uses public actions (like functions) to checkout the code and prepare a node environment
@@ -16,11 +17,19 @@ jobs:
         with: 
           node-version: '20'
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
       # Environment now setup, we can run tests, linting, etc.
       - name: Check Style
         run: npm run eslint
       - name: Build
         run: npm run build
-      - name: Test
-        run: npm run test
+      - name: E2E Test
+        run: |
+          npx playwright install --with-deps
+          npm run test:e2e
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled( )}}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
