Updates workflow trigger
- Changes worflow trigger to run on new pull requests to main branch.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs:
   # Using an ubuntu-20.04 virtual environment. Use what you will have in production.
