--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,9 @@ on:
     branches: [main]
     types: [opened, synchronize]
 
+env:
+  SKIP_VERSIONING: ${{ contains(join(github.event.commits.*.message), '#skip') }}
+
 jobs:
   # Using an ubuntu-20.04 virtual environment. Use what you will have in production.
   simple_deployment_pipeline:
@@ -50,7 +53,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4 
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' && !env.SKIP_VERSIONING }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
